--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "jspdf": "latest",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.18.0",
     "next": "15.2.4",
