--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "next lint",
     "start": "next start",
     "db:setup": "node scripts/setup-db.mjs",
-    "db:seed:mongo": "node scripts/seed-mongo.mjs"
+    "db:seed:mongo": "node scripts/seed-mongo.mjs",
+    "health:check": "curl http://localhost:3002/api/health || curl http://localhost:3001/api/health || curl http://localhost:3000/api/health",
+    "test:apis": "node scripts/test-apis.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -77,6 +79,7 @@
     "@tailwindcss/postcss": "^4.1.9",
     "@types/bcryptjs": "^3.0.0",
     "@types/node": "^22",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
