Fixed bug in login system

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "geist": "^1.3.1",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
+    "ioredis": "^5.7.0",
     "jspdf": "latest",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.454.0",
@@ -66,6 +67,8 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -76,10 +79,12 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
     "@types/bcryptjs": "^3.0.0",
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^22",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/socket.io": "^3.0.2",
     "@types/uuid": "^10.0.0",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
